--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
+body,
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.header {
+  text-align: center;
+  background-color: #394867;
+  padding: 40px;
+  margin: 0;
+  color: #9ba4b5;
+}
+
+.container {
+  margin: 50px auto;
+  padding: 50px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  width: 60%;
+}
+
+.footer {
+  text-align: center;
+  position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 40px 0;
+    background-color: #F1F6F9;
 }
